examples/test/testpolicy11253.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11253
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key24: value34
      key41: value19
      key30: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value46
          key23: value13
          key40: value46
